--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Box-Word v2</title>
   </head>
+
   <body>
     <h1>Box-Word version 2</h1>
+    <!-- <button onclick="print('Bogdan')">Click</button> -->
+    <button id="btn">Click</button>
   </body>
+  <script src="modules/test.js"></script>
+
+  <script src="index.js"></script>
 </html>
