--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,11 +8,19 @@
     <meta name="description" content="Box Word game v2" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Acme"
+      rel="stylesheet"
+    />
     <script src="./myscript.js"></script>
     <title>Box Word v2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"
+    ></script>
   </body>
 </html>
